syntax = "proto3";

package secterm.v1;

option go_package = "secterm/v1;sectermv1";

enum SectermFileCmd {
    //文件上传失败
    TRANS_ERROR = 0;
    //文件已存在
    TRANS_FILE_EXISTED = 1;
    //文件传输取消
    TRANS_CANCLE = 2;
    //文件传输完成
    TRANS_SUCCESS = 3;
}

enum ActionMode {
    ACTIVE = 0;      //主动默认
    PASSIVE = 1;     //被动模式（只能服务器发送给客户端，如果客户端发送被动请求将被忽略）
}

enum TransProtocol {
    ZMODEM = 0;      //zmodem协议
    SFTP = 1;        //sftp协议
    SCP = 2;         //scp协议
    FTP = 3;         //ftp协议
}

//文件基本信息
message SectermFileInfo {
    //文件名称
    string Name = 1;
    //文件路径
    string Path = 2;    
    //修改时间
    uint64 ModTime = 3; 
    //文件大小
    uint64 Size = 4; //字节
    //文件权限
    uint32 Mode = 5;
    //是否为目录
    bool IsDir = 6; //文件上传不可以上传目录
}

//目录查询响应
message SectermFileListRequest {
    string dirPath = 1;    //文件夹绝对路径
}

//目录查询响应
message SectermFileListResponse {
    repeated SectermFileInfo FileInfo = 1;
}

//文件重命名/移动
message SectermFileMove {
    string filePath = 1;    //原始路径
    string DstPath = 2;     //目标路径
    bool force = 3;         //强制覆盖
    bool recursion = 4;     //是否递归
}

//删除文件
message SectermFileDelete {
    repeated string Path = 1;   //删除文件路径数组
}

//创建文件
message SectermFileCreate {
    SectermFileInfo file =1;    //文件创建
}

//上传文件/下载请求
message SectermFileTransReq {
    bool flag = 1;                 // ture上传、false下载
    string uuid = 3;               //文件uuid（被动请求为空，上传的时候应该从http上传接口返回）
    TransProtocol proto = 4;       //文件下载协议
    ActionMode mode = 5;           //文件下载请求模式（主动、被动）
}

//传输成功确认
message SectermFileTransRes {
    string uuid = 1;               // 文件传输uuid
}

message SectermFileCmdMessage {
    SectermFileCmd cmd = 1;
}

message SectermFileMessage {
    oneof data{
        //文件查询请求
        SectermFileListRequest file_list_req = 1;
        //文件查询响应
        SectermFileListResponse file_list_res = 2;
        //文件移动/重命名请求
        SectermFileMove file_mv = 3;
        //文件删除请求
        SectermFileDelete file_del = 4;
        //文件/文件夹创建请求
        SectermFileCreate file_create = 5;
        //文件上传指令
        SectermFileCmdMessage file_cmd = 6;
        //文件传输请求
        SectermFileTransReq file_trans_req = 7;
        //文件传输响应
        SectermFileTransRes file_trans_res = 8;
    }
}
