syntax = "proto3";
package secterm.v1;
option go_package = "secterm/v1;sectermv1";

message SectermTerminalResize {
    // 终端宽度（每字符）
    fixed32 colums = 1;
    // 终端高度（没字符）
    fixed32 rows = 2;
}

message SectranTeminalCharacters {
    // 终端数据
    bytes Data = 1;
}

message SectermTerminalMessage {
    oneof data{
        // window size change message 窗口大小变动
        SectermTerminalResize resize = 1;
        // terminale message 终端消息
        SectranTeminalCharacters characters = 2;
    }
}